<resources>

    <string name="app_name">together</string>
    <string name="distance_less">50 M以下</string>
    <string name="distance_50">50 M</string>
    <string name="diestace_100">100 M</string>
    <string name="distance_200">200 M</string>
    <string name="distance_1000">1 KM</string>
    <string name="distance_2000">2 KM</string>
    <string name="distance_more">2 KM以上</string>
    <string name="event_film">电影</string>
    <string name="event_drama">体育</string>
    <string name="event_concert">演唱会</string>
    <string name="event_lecture">讲座</string>
    <string name="event_ktv">K歌</string>
    <string name="event_other">其他</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">together</string>
	<string name="music_positive_btn">确定</string>
    <string name="music_negative_btn">取消</string>
    <string name="music_exit">退出程序</string>
    <string name="music_sure_exit">确定要退出吗?</string>
     <string name="miss_sdcard">SD卡不存在</string>
    <string name="sdcard_can_write">SD卡无法读写</string>
    <string name="network_failed">网络连接失败</string>
    <string name="home">首页</string>
    <string name="msg">消息</string>
    <string name="friend">好友</string>
    <string name="settings">设置</string>
    <string name="logout">注销</string>
    <string name="login">登录</string>
    <string name="login_succ">登录成功</string>
    <string name="user_get_failure">用户信息获取失败</string>
    <string name="login_miss_username">用户名不能为空</string>
    <string name="login_miss_password">密码不能为空</string>
    <string name="login_miss_confirm">请确认密码</string>
    <string name="login_confirm_fail">两次输入密码不同</string>
    <string name="login_fail">登陆失败</string>
    <string name="update">更新</string>
    <string name="register_title">用户注册</string>
    <string name="register_fail">注册失败</string>
    <string name="register_password">密码:</string>
    <string name="register_confirm">确认密码:</string>
    <string name="register_name">用户名:</string>
    <string name="register_register">注册</string>
    <string name="_loading">加载中</string>
    <string name="send_message_title">发起活动</string>
    <string name="event_place">地点</string>
    <string name="event_time">时间</string>
    <string name="event_type">类型</string>
    <string name="event_description">描述</string>
    <string name="pull_to_refresh_pull_label">下拉以刷新</string>
    <string name="pull_to_refresh_release_label">松开以刷新</string>
    <string name="pull_to_refresh_refreshing_label">载入中</string>
    <string name="pull_to_refresh_tap_label">点击以刷屏</string>
    
    <string name="send">发布</string>
    <string name="user">用户名</string>
    <string name="fill_event_place">请填写详细活动地点</string>
    <string name="fill_event_description">请填写详细活动描述</string>
    
    <string name="_more">点击获取更多项</string>
    <string name="no_more">没有更多了</string>
    
    <string name="nearby">附近用户</string>
    <string name="send_by">我发布的</string>
    <string name="followed_by">我参加的</string>
    <string name="follow_me">Following</string>
    <string name="followed">Followed</string>
     <string name="follow">Follow</string>
     <string name="event_info">活动信息</string>
    <string name="participate">参加</string>
    <string name="follower">参与者</string>
    
     <string name="set_settings">个性设置</string>
    <string name="save">保存</string>
    <string name="max_visible">最大可视范围</string>
    <string name="fav_events">我感兴趣的话题</string>
    <string name="film">电影</string>
    <string name="concert">演唱会</string>
    <string name="eating">吃饭</string>
    <string name="singing">唱歌</string>
    <string name="locate">定位</string>
    <string name="otheruser">周围用户</string>
</resources>