<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="fill_parent"    android:background="@drawable/bg_box"    android:orientation="vertical" >    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="43dp"        android:layout_gravity="center"        android:gravity="center"        android:orientation="horizontal" >        <TextView            android:layout_width="250dp"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:gravity="center"            android:text="@string/set_settings"            android:textColor="@color/white"            android:textSize="22dp" />        <TextView            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:gravity="center"            android:text="@string/save"            android:textColor="@color/white"            android:textSize="20dp" />    </LinearLayout>    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:background="@drawable/bg_box"        android:orientation="vertical" >        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_weight="0.53"            android:background="@drawable/bg_register"            android:orientation="vertical" >            <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:paddingBottom="10dp"                android:paddingLeft="10dp"                android:paddingTop="10dp" >                <TextView                    android:layout_width="120dp"                    android:layout_height="wrap_content"                    android:paddingRight="10dp"                    android:text="@string/max_visible"                    android:textColor="@color/white"                    android:textSize="18dp" />                <Spinner                    android:id="@+id/event_spinner"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />            </LinearLayout>            <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:paddingBottom="10dp"                android:paddingLeft="10dp"                android:paddingTop="10dp" >                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:paddingRight="10dp"                    android:text="@string/fav_events"                    android:textColor="@color/white"                    android:textSize="18dp" />                <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:paddingBottom="10dp"                android:paddingLeft="10dp"                android:paddingTop="10dp"                android:orientation="vertical" >                <CheckBox                android:id="@+id/checkBox_film"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textColor="@color/white"                android:text="@string/film" />                <CheckBox                android:id="@+id/checkBox_concert"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textColor="@color/white"                android:text="@string/concert" />                <CheckBox                android:id="@+id/checkBox_eating"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textColor="@color/white"                android:text="@string/eating" />                <CheckBox                android:id="@+id/checkBox_singing"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textColor="@color/white"                android:text="@string/singing" />                </LinearLayout>            </LinearLayout>                    </LinearLayout>    </LinearLayout></LinearLayout>