<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roots"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_box" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/bodylayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@drawable/tab"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/tab_main_layout"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_star_layout"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/msg"
                    android:textColor="@color/white"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_column_layout"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/friend"
                    android:textColor="@color/white"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_more_layout"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="22dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>