<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_box"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <!-- <ImageButton
                android:id="@+id/register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/back" /> -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/register_title"
                android:textColor="@color/white"
                android:textSize="22dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_box"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_register"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp" >

                    <TextView
                         android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:textSize="18dp"
                        android:text="@string/register_name" />

                    <EditText
                        android:id="@+id/register_name_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:maxLength="16"
                        android:paddingLeft="10dp" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp" >

                    <TextView
                         android:layout_width="110dp"
                        android:layout_height="wrap_content"
                         android:paddingRight="10dp"
                         android:textSize="18dp"
                        android:text="@string/register_password" />

                    <EditText
                        android:id="@+id/register_password_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:maxLength="16"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp" >
                    </EditText>
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom ="10dp" >

                    <TextView
                         android:layout_width="110dp"
                        android:layout_height="wrap_content"
                         android:paddingRight="10dp"
                         android:textSize="18dp"
                        android:text="@string/register_confirm" />

                    <EditText
                        android:id="@+id/register_confirm_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:maxLength="16"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp" >
                    </EditText>
                </LinearLayout>
                
                
            </LinearLayout>
        </LinearLayout>

         <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:gravity="center"
                android:paddingLeft="10dp" >
                                  
            
             <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="5dp"
                 />
            <TextView
                android:id="@+id/register_btn"
                android:text="@string/register_register"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:padding = "5dp"
                android:textColor="@color/black"               
                android:background="@drawable/button_style"
                />
            </LinearLayout>	
         
    </LinearLayout>

</LinearLayout>